<resources>
    <string name="app_name">NoahsArk</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="app_title">Noah\'s Ark</string>
    <string name="txt_user">Username</string>
    <string name="txt_pass">Password</string>
    <string name="login">login</string>
    <string name="signup_desc">Don\'t have an account? </string>
    <string name="signup">Sign Up.</string>
    <string name="title_activity_signup">Create your profile</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="phnone_no">Phone No.</string>
    <string name="address">Address</string>
    <string name="blood_group">Blood group</string>
    <string name="emergency_contact_name_number">Emergency Contact (name/ number)</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="sign_up">Sign Up</string>
    <string name="profile_picture">profile picture</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_weather">Weather</string>
</resources>
