<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#009688"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_dropshadow"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:contentDescription="@string/profile_picture"
                app:srcCompat="@drawable/profile" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/txt_name_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/name"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:textColor="#009688"
                    android:textSize="30sp" />

                <EditText
                    android:id="@+id/txt_age_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/age"
                    android:importantForAutofill="no"
                    android:inputType="number" />

            </LinearLayout>

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|top"
                android:orientation="vertical"
                android:padding="10dp">

                <EditText
                    android:id="@+id/txt_address_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/address"
                    android:importantForAutofill="no"
                    android:inputType="textPostalAddress" />

                <EditText
                    android:id="@+id/txt_ph_no_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/phnone_no"
                    android:importantForAutofill="no"
                    android:inputType="phone" />

                <EditText
                    android:id="@+id/txt_city_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/city"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/txt_state_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/state"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/txt_emergency_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/emergency_contact_name_number"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/txt_bloodgrp_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/blood_group"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/txt_pass_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/txt_pass"
                    android:importantForAutofill="no"
                    android:inputType="textPassword" />

                <EditText
                    android:id="@+id/txt_pass_conf_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/confirm_password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword" />

                <Button
                    android:id="@+id/btn_signup_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up" />
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|top"
            android:orientation="vertical"
            android:padding="10dp"/>

    </LinearLayout>
</LinearLayout>